--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -2,5 +2,6 @@ FROM python:3.8.14-bullseye
 WORKDIR app/
 COPY . .
 RUN pip install -r requirements.txt
-RUN chmod 755 manage.py
-ENTRYPOINT ["python3","manage.py","migrate"]
+RUN chmod 755 entry-point.sh
+ENTRYPOINT ["./entry-point.sh"]
+#ENTRYPOINT ["/bin/bash"]
