--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       STATIC_ROOT: /var/www/gutendex/static-root/
 #    stdin_open: true # docker run -i
 #    tty: true
-
+    volumes:
+      - staticvolume:/app/static/
 
   gutendex:
     image: postgres:14.5
@@ -54,20 +55,21 @@ services:
       POSTGRES_DB: gutendex
 
 
-#  nginx:
-#    image: nginx:latest
-#    container_name: nginx
-#    volumes:
-#     - ./chat/templates/index.html:/usr/share/nginx/html/index.html
-#     - ./conf:/etc/nginx
-#    ports:
-#     - 8080:80
-#    environment:
-#     - NGINX_PORT=80
-#    networks:
-#     - mynet
-#    depends_on:
-#     - flask
+  frontend:
+    image: nginx:latest
+    container_name: front
+    volumes:
+     - staticvolume:/usr/share/nginx/html/static
+     - ./project/conf/nginx.conf:/etc/nginx/nginx.conf
+     - ./project/gutendex/templates/home.html:/usr/share/nginx/html/index.html
+    ports:
+     - 8080:80
+    environment:
+     - NGINX_PORT=80
+    networks:
+     - exam
+    depends_on:
+     - backend
 
 networks:
   exam:
@@ -76,3 +78,5 @@ networks:
 volumes:
   exam:
     name: exam
+  staticvolume:
+    name: staticvolume
