--- a/project/conf/nginx.conf
+++ b/project/conf/nginx.conf
@@ -4,8 +4,9 @@ http {
   include mime.types;
   server {
     listen 80 default_server;
-  
+    add_header 'Access-Control-Allow-Origin' '*';
     location / {
+      add_header X-container-name front;
       root /usr/share/nginx/html; 
       try_files $uri $uri/ index.html @server;
     }
@@ -13,28 +14,17 @@ http {
     location @server {
       proxy_pass http://backend:8000;
       proxy_redirect off;
-
+      add_header X-container-name backend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
     }
 
-    location /static/ {
-        autoindex on;
-        alias /usr/share/nginx/html/static;
+    location /static {
+#      autoindex on;
+      add_header X-container-name backend;
+      root /usr/share/nginx/html/static;
+#      try_files $uri $uri/;
     }
-
-#    location /search {
-#      proxy_pass http://back:5000/search;
-#
-#      proxy_set_header Host $host;
-#      proxy_set_header X-Real-IP $remote_addr;
-#      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#
-#    }
-#    location /api {
-    
-#    }
   }
 }
