--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -60,8 +60,8 @@ services:
     container_name: front
     volumes:
      - staticvolume:/usr/share/nginx/html/static
-     - ./project/conf/nginx.conf:/etc/nginx/nginx.conf
-     - ./project/gutendex/templates/home.html:/usr/share/nginx/html/index.html
+     - ./conf/nginx.conf:/etc/nginx/nginx.conf
+     - ./gutendex/templates/home.html:/usr/share/nginx/html/index.html
     ports:
      - 8080:80
     environment:
